--- a/index.html
+++ b/index.html
@@ -1,44 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style_local.scss" />
+        <title>Document</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_local.scss">
-    <title>Document</title>
-</head>
+    <body>
+        <form>
+            <div
+                class="js-form-item form-item js-form-type-select form-type-select js-form-item-shipping-information-shipping-profile-address-0-address-administrative-area form-item-shipping-information-shipping-profile-address-0-address-administrative-area"
+            >
+                <label
+                    for="edit-shipping-information-shipping-profile-address-0-address-administrative-area"
+                    class="js-form-required form-required"
+                    >State</label
+                >
 
-<body>
-    <form>
-        <div
-            class="js-form-item form-item js-form-type-select form-type-select js-form-item-shipping-information-shipping-profile-address-0-address-administrative-area form-item-shipping-information-shipping-profile-address-0-address-administrative-area">
-            <label for="edit-shipping-information-shipping-profile-address-0-address-administrative-area"
-                class="js-form-required form-required">State</label>
-
-            <select class="administrative-area form-select required" autocomplete="address-level1"
-                data-drupal-selector="edit-shipping-information-shipping-profile-address-0-address-administrative-area"
-                id="edit-shipping-information-shipping-profile-address-0-address-administrative-area"
-                name="shipping_information[shipping_profile][address][0][address][administrative_area]"
-                required="required" aria-required="true">
-                <option value="AL" data-test="testasdasassda" id='ajdiii' style="color:red;" class="asd">Alabama
-                </option>
-                <option value="AK">Alaska</option>
-                <option value="AS">American Samoa</option>
-                <option value="AZ">Arizona</option>
-                <option value="AR">Arkansas</option>
-                <option value="AA">Armed Forces (AA)</option>
-                <option value="AE">Armed Forces (AE)</option>
-                <option value="AP">Armed Forces (AP)</option>
-                <option value="CA">California</option>
-                <option value="CO">Colorado</option>
-                <option value="CT">Connecticut</option>
-                <option value="DE">Delaware</option>
-                <option value="DC">District of Columbia</option>
-                <option value="FL">Florida</option>
-            </select>
-        </div>
-    </form>
-    <script src="./custom-select.js"></script>
-</body>
-
+                <select
+                    class="administrative-area form-select required"
+                    autocomplete="address-level1"
+                    data-drupal-selector="edit-shipping-information-shipping-profile-address-0-address-administrative-area"
+                    id="edit-shipping-information-shipping-profile-address-0-address-administrative-area"
+                    name="shipping_information[shipping_profile][address][0][address][administrative_area]"
+                    required="required"
+                    aria-required="true"
+                >
+                    <option value="AL" data-test="testasdasassda" id="ajdiii" style="color: red;" class="asd">Alabama </option>
+                    <option value="AK">Alaska</option>
+                    <option value="AS">American Samoa</option>
+                    <option value="AZ">Arizona</option>
+                    <option value="AR">Arkansas</option>
+                    <option value="AA">Armed Forces (AA)</option>
+                    <option value="AE">Armed Forces (AE)</option>
+                    <option value="AP">Armed Forces (AP)</option>
+                    <option value="CA">California</option>
+                    <option value="CO">Colorado</option>
+                    <option value="CT">Connecticut</option>
+                    <option value="DE">Delaware</option>
+                    <option value="DC">District of Columbia</option>
+                    <option value="FL">Florida</option>
+                </select>
+            </div>
+        </form>
+        <script src="./custom-select.js"></script>
+        <script>
+            const selector1 = new Choosely({
+                selector: 'form .form-item.form-type-select select',
+                searchable: true,
+                inheritAttributes: ['value', 'style'], // default false,
+                enableArrowNavigation: true,
+                on: {
+                    Init() {
+                        console.log('Init.');
+                    },
+                    Open() {
+                        console.log('Open.');
+                    },
+                    Close() {
+                        console.log('Close.');
+                    },
+                    Select() {
+                        console.log('Select.');
+                    }
+                }
+            });
+        </script>
+    </body>
 </html>
