--- a/dev/index.html
+++ b/dev/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style_local.css" />
+        <link rel="stylesheet" href="./style_local.scss"">
         <title>Document</title>
     </head>
 
@@ -44,28 +44,6 @@
                 </select>
             </div>
         </form>
-        <script src="./custom-select.js"></script>
-        <script>
-            const selector1 = new Choosely({
-                selector: 'form .form-item.form-type-select select',
-                searchable: true,
-                inheritAttributes: ['value', 'style'], // default false,
-                enableArrowNavigation: true,
-                on: {
-                    Init() {
-                        console.log('Init.');
-                    },
-                    Open() {
-                        console.log('Open.');
-                    },
-                    Close() {
-                        console.log('Close.');
-                    },
-                    Select() {
-                        console.log('Select.');
-                    }
-                }
-            });
-        </script>
+        <script src="script.js"></script>
     </body>
 </html>
