added parcel, compress on.function error handling

--- a/dev/index.html
+++ b/dev/index.html
@@ -27,7 +27,9 @@
                     required="required"
                     aria-required="true"
                 >
-                    <option value="AL" data-test="testasdasassda" id="ajdiii" style="color: red" class="asd">Alabama</option>
+                    <option value="AL" data-test="testasdasassda" id="ajdiii" style="color: red" class="asd">
+                        Alabama
+                    </option>
                     <option value="AK">Alaska</option>
                     <option value="AS">American Samoa</option>
                     <option value="AZ">Arizona</option>
